<resources>
  <string name="app_name">快乐淘</string>
  <string name="enter">立即体验</string>
  <string name="zhuye">主页</string>
  <string name="fenlei">分类</string>
  <string name="gouwuche">购物车</string>
  <string name="geren">个人中心</string>
  <string name="saomiao">扫一扫</string>
  <string name="tianmao">天猫</string>
  <string name="juhuasuan">聚划算</string>
  <string name="tianmaoguoji">天猫国际</string>
  <string name="waimai">外卖</string>
  <string name="market">天猫超市</string>
  <string name="chongzhi">充值中心</string>
  <string name="lvxing">旅行</string>
  <string name="jinbi">领金币</string>
  <string name="paimai">拍卖</string>
  <string name="set">设置</string>
  <string name="name">登录/注册</string>
  <string name="dingdan">我的订单</string>
  <string name="fukuan">待付款</string>
  <string name="fahuo">待发货</string>
  <string name="shouhuo">收货信息</string>
  <string name="pingjia">待评价</string>
  <string name="tuikuan">退款/售后</string>
  <string name="gongju">必备工具</string>
  <string name="kaquan">卡券包</string>
  <string name="mayi">蚂蚁花呗</string>
  <string name="huiyuan">我的会员</string>
  <string name="xiaomi">我的小蜜</string>
  <string name="wenda">我的问答</string>
  <string name="quanzi">我的圈子</string>
  <string name="mepingjia">我的评价</string>
  <string name="fenxiang">我的分享</string>
  <string name="tengxun">腾讯</string>
  <string name="zhifubao">支付宝</string>
  <string name="weixin">微信</string>
  <string name="weibo">微博</string>
  <string name="ziliao">个人资料</string>
  <string name="username">会员名</string>
  <string name="yue">余额</string>
  <string name="dizhi">地址</string>
  <string name="phonenum">手机号码</string>
  <string name="sex">性别</string>
  <string name="touxiang">用户头像</string>
  <string name="yuechongzhi">余额充值</string>
  <string name="allselcet">全选</string>
  <string name="jiesuan">结算</string>
  <string name="clear">清空购物车</string>
  <string name="chongqian">充值金额</string>
  <string name="sure">确定</string>
  <string name="sure_buy">确定购买</string>
  <string name="noshoping">快去购物吧！</string>
  <string name="shoppingclass">商品分类</string>
  <string name="writenote">填写收货信息</string>
  <string name="waitship">待发货</string>
</resources>
