<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bisque">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/color_gradient"
      >
    <RadioButton
        android:id="@+id/shaomiao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/scan"
        android:text="@string/saomiao"
        android:gravity="center"
        android:button="@null"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gouwuche"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
  </RelativeLayout>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:visibility="gone"
        >
    </ListView>
  <TextView
      android:id="@+id/noshpping"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="8"
      android:text="@string/noshoping"
      android:gravity="center"
      android:background="@color/dodgerblue"
      android:textSize="32sp"
      />
  <LinearLayout
      android:layout_weight="1"
      android:id="@+id/ll_bottom_activity_main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    <CheckBox
        android:id="@+id/cb_all_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allselcet"/>

    <Button
        android:id="@+id/btn_total_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jiesuan"/>
    <Button
        android:id="@+id/btn_clear_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"/>
    <Button
        android:id="@+id/sure_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure"/>
  </LinearLayout>


</LinearLayout>