<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antiquewhite">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/color_gradient"
      >
    <RadioButton
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/set"
        android:gravity="center"
        android:text="@string/set"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/geren"
        android:textColor="@color/blueviolet"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:background="@mipmap/info"
        />
  </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:background="@drawable/color_gradient"
      >
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@mipmap/touxiang"
        android:id="@+id/touxiang"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="42dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/touxiang"
        android:layout_marginStart="10dp"
        android:textColor="@color/antiquewhite"
        android:textSize="16sp"
        />
  </RelativeLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="30dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dingdan"
        android:layout_gravity="center_vertical"
        />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
    android:background="@color/dodgerblue"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      >
    <RadioButton
        android:id="@+id/fukuan"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/fukuan"
        android:gravity="center"
        android:text="@string/fukuan"
        android:textSize="12sp"
        />
    <RadioButton
        android:id="@+id/fahuo"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/fahuo"
        android:gravity="center"
        android:text="@string/fahuo"
        android:textSize="12sp"
        />
    <RadioButton
        android:id="@+id/shouhuo"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/shouhuo"
        android:gravity="center"
        android:text="@string/shouhuo"
        android:textSize="12sp"
        />
    <RadioButton
        android:id="@+id/pj"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/pingjia"
        android:gravity="center"
        android:text="@string/pingjia"
        android:textSize="12sp"
        />
    <RadioButton
        android:id="@+id/tuikuan"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableTop="@mipmap/tuikuan"
        android:gravity="center"
        android:text="@string/tuikuan"
        android:textSize="12sp"
        />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/dodgerblue"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="30dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gongju"
        android:layout_gravity="center_vertical"
        />
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/dodgerblue"/>
  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/item_list"
      >
    <TableRow>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/tianmao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/kaquan"
          android:text="@string/kaquan"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/mayi"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/mayi"
          android:text="@string/mayi"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/huiyuan"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/huiyuan"
          android:text="@string/huiyuan"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/xiaomi"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/xiaomi"
          android:text="@string/xiaomi"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
    </TableRow>
    <TableRow>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/wemda"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/wemda"
          android:text="@string/wenda"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/quanzi"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/quanzi"
          android:text="@string/quanzi"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/pingjia"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/pingjia"
          android:text="@string/mepingjia"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/fenxiang"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/fenxiang"
          android:text="@string/fenxiang"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>

    </TableRow>
    <TableRow>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/weibo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/weibo"
          android:text="@string/weibo"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/weixin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/weixin"
          android:text="@string/weixin"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/tengxun"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/tengxun"
          android:text="@string/tengxun"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>
      <RadioButton
          android:padding="10dp"
          android:id="@+id/zhifubao"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableTop="@mipmap/zhifubao"
          android:text="@string/zhifubao"
          android:gravity="center"
          android:layout_weight="1"
          android:button="@null"
          android:textSize="12sp"
          android:textColor="@color/darkred"/>

    </TableRow>
  </TableLayout>
</LinearLayout>