<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceblue">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/color_gradient"
    >
  <RadioButton
      android:id="@+id/shaomiao"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@mipmap/scan"
      android:text="@string/saomiao"
      android:gravity="center"
      android:button="@null"
      android:textSize="12sp"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:text="@string/zhuye"
      android:textColor="@color/blueviolet"
      />
</RelativeLayout>

      <com.jude.rollviewpager.RollPagerView
          android:id="@+id/roll_ad"
          android:layout_width="match_parent"
          android:layout_height="100dp"
          app:rollviewpager_play_delay="2000"
          />
      <TableLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <TableRow>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/tianmao"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/tianmao"
              android:text="@string/tianmao"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/juhuasuan"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/juhuasuan"
              android:text="@string/juhuasuan"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/tianmaoguoji"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/tianmaoguoji"
              android:text="@string/tianmaoguoji"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/waimai"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/waimai"
              android:text="@string/waimai"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/marke"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/marke"
              android:text="@string/market"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
        </TableRow>
        <TableRow>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/chongzhi"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/chongzhi"
              android:text="@string/chongzhi"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/lvxing"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/lvxing"
              android:text="@string/lvxing"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/jinbi"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/jinbi"
              android:text="@string/jinbi"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/paimai"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/paimai"
              android:text="@string/paimai"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
          <RadioButton
              android:padding="10dp"
              android:id="@+id/fenlei"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@mipmap/fenlei"
              android:text="@string/fenlei"
              android:gravity="center"
              android:layout_weight="1"
              android:button="@null"
              android:textSize="12sp"
              android:textColor="@color/darkred"/>
        </TableRow>
      </TableLayout>
      <GridView
          android:id="@+id/shoppingView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:columnWidth="90dp"
          android:gravity="center_horizontal"
          android:horizontalSpacing="10dp"
          android:numColumns="2"
          android:stretchMode="columnWidth"
          android:verticalSpacing="10dp"
          />

</LinearLayout>