<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/floralwhite"
    >
 <RadioGroup
     android:id="@+id/buttom"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_alignParentBottom="true">


  <RadioButton
      android:id="@+id/homepage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/homepage_selector"
      android:text="@string/zhuye"
      android:gravity="center"
      android:layout_weight="1"
      android:button="@null"
      android:checked="true"
      android:textSize="12sp"
      android:textColor="@color/red_text_selector"/>
  <RadioButton
      android:id="@+id/classfication"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/classfication_selector"
      android:text="@string/fenlei"
      android:gravity="center"
      android:layout_weight="1"
      android:button="@null"
      android:textSize="12sp"
      android:textColor="@color/red_text_selector" />
  <RadioButton
      android:id="@+id/shoppingcar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/shoppingcar_selector"
      android:text="@string/gouwuche"
      android:gravity="center"
      android:layout_weight="1"
      android:button="@null"
      android:textSize="12sp"
      android:textColor="@color/red_text_selector"/>
  <RadioButton
      android:id="@+id/personcenter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/personcenter_selector"
      android:text="@string/geren"
      android:gravity="center"
      android:layout_weight="1"
      android:button="@null"
      android:textSize="12sp"
      android:textColor="@color/red_text_selector"/>
 </RadioGroup>
 <android.support.v4.view.ViewPager
     android:id="@+id/id_viewpager"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_above="@id/buttom"
     >
 </android.support.v4.view.ViewPager>



</RelativeLayout>
