<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceblue">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="@drawable/table_gradient"
      >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/back"
        android:layout_centerVertical="true"
        android:id="@+id/back"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ziliao"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <ImageView
        android:id="@+id/userMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/caidan"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        />
  </RelativeLayout>
  <RelativeLayout
      android:id="@+id/touxiang"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touxiang"
        android:layout_centerVertical="true"
        />
    <ImageView
        android:id="@+id/imgtouxiang"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@mipmap/touxiang"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/blanchedalmond"/>
  <RelativeLayout

      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:maxLines="1"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/blanchedalmond"/>
  <RelativeLayout
      android:id="@+id/yue_rl"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yue"
        android:layout_centerVertical="true"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/yue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/blanchedalmond"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dizhi"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/dizhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:maxLines="1"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/blanchedalmond"/>
  <RelativeLayout

      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenum"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:maxLines="1"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/blanchedalmond"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_centerVertical="true"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:maxLines="1"
        />
  </RelativeLayout>
  <Button
      android:id="@+id/chongzhi"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/yuechongzhi"
      android:background="@mipmap/textbox"
      />

</LinearLayout>